Update source links.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	they answer the question "what is the value of this
 	element?"</p>
 
-      <p><a href="#">on github</a></p>
+      <p><a href="https://github.com/weaver/View.js">on github</a></p>
     </section>
 
     <section class="example">
@@ -22,7 +22,7 @@
       <p class="teaser">A modal dialog.</p>
       <p class="more">
 	<a href="dialog.html">demo</a>
-	<a href="#">source</a>
+	<a href="https://github.com/weaver/View.js/blob/master/demo/js/dialog.js">source</a>
       </p>
     </section>
 
@@ -32,7 +32,7 @@
       inputs, but are easier to style.</p>
       <p class="more">
 	<a href="inputs.html">demo</a>
-	<a href="#">source</a>
+	<a href="https://github.com/weaver/View.js/blob/master/demo/js/inputs.js">source</a>
       </p>
     </section>
 
@@ -41,7 +41,7 @@
       <p class="teaser">Drag a block around.</p>
       <p class="more">
 	<a href="mouse.html">demo</a>
-	<a href="#">source</a>
+	<a href="https://github.com/weaver/View.js/blob/master/demo/js/mouse.js">source</a>
       </p>
     </section>
 
@@ -50,7 +50,7 @@
       <p class="teaser">A sortable list.</p>
       <p class="more">
 	<a href="sort.html">demo</a>
-	<a href="#">source</a>
+	<a href="https://github.com/weaver/View.js/blob/master/demo/js/sort.js">source</a>
       </p>
     </section>
 
